# sealed

./: Cargo.toml  readme.md
src/: lib.rs  sealed.rs
