[package]
name = "sealed"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"
description = """
Typed encryption, generic over serde::Serialize/Deserialize types.
"""
documentation = "https://docs.rs/sealed"
keywords = ["cryptology", "box"]
readme = "readme.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bddap/sealed"
categories = [] # pr me!

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.1.3"
rust_sodium = "0.10.2"

[dev-dependencies]
serde_json = "1"
pow = "0.1.4"
